# TextSearch

./: CMakeLists.txt  README.md  main.cpp
include/: FileScanner.h  InvertedIndex.h  QueryEngine.h  TextParser.h
src/: FileScanner.cpp  InvertedIndex.cpp  QueryEngine.cpp  TextParser.cpp
